Kudobox-frontend/src/app/app.component.scss
:host {
    display: flex;
    flex-flow: column;
    padding-top: 64px;
    box-sizing: border-box;
    min-height: 100%;
}

.mat-toolbar {
    flex-shrink: 0;
    height: 64px;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 999;
}

.mat-toolbar-row {
    background-color: #72b43c;
}

.menu-spacer {
    flex: 1 1 auto;
}

.mat-sidenav-container {
    flex: 1;
}

.kudoCount {
    margin-left: 10px;
}

fa-icon {
    padding-right: 15px;
    width: 30px;
    text-align: center;
}

.mat-sidenav {
    width: 190px;
}

@media only screen and (max-width: 600px) {
    .mat-toolbar {
        height: 56px;
    }
}

